--- a/html/index.html
+++ b/html/index.html
@@ -15,23 +15,24 @@
 <body>                                                                  
 
 <style>
-#chart_container {
-        top: 5px;
+.chart_container {
+        top: 25px;
         position: relative;
         font-family: Arial, Helvetica, sans-serif;
+
 }
                 
-#chart {
+.chart {
 	position: relative;
 	left: 40px;
 }
-#y_axis {
+.y_axis {
 	position: absolute;
 	top: 0;
 	bottom: 0;
 	width: 40px;
 }
-#legend {
+.legend {
 	position: absolute;
         top: 0;
         bottom: 0;
@@ -48,11 +49,13 @@
 </style>
 <h1>PowerDNS</h1>
 
-<div id="chart_container">
-	<div id="y_axis"></div>
-		<div id="chart"></div>
-                <div id="legend"></div>
-        </div>
+<div id="hier1"></div>
+<br/><br/>
+<div id="hier2"></div>
+<br/><br/>
+<div id="hier3"></div>
+<br/><br/>
+<div id="hier4"></div>
 
 </body>                                                                 
 </html>
