--- a/html/index.html
+++ b/html/index.html
@@ -37,8 +37,8 @@
         top: 0;
         bottom: 0;
 	left: 510px;
-	width: 140px;
-        height: 40px;
+	width: 150px;
+#        height: 90px;
 }
 
 .rickshaw_graph .x_tick .title {
@@ -56,6 +56,8 @@
 <div id="hier3"></div>
 <br/><br/>
 <div id="hier4"></div>
+<br/><br/>
+<div id="hier5"></div>
 
 </body>                                                                 
 </html>
