move graph config to local.js, add more graphs, plus 'percentalizer' function helper

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
 <link type="text/css" rel="stylesheet" href="lines.css">
 
 <script src="engine.js"></script>
+<script src="local.js"></script>
 <body>                                                                  
 
 <style>
@@ -58,6 +59,12 @@
 <div id="hier4"></div>
 <br/><br/>
 <div id="hier5"></div>
+<br/><br/>
+<div id="hier6"></div>
+<br/><br/>
+<div id="hier7"></div>
+<br/><br/>
+<div id="hier8"></div>
 
 </body>                                                                 
 </html>
