more graphs, configurable hostname

--- a/html/index.html
+++ b/html/index.html
@@ -49,22 +49,28 @@
 
 </style>
 <h1>PowerDNS</h1>
-
+<h2>Recursor</h2>
 <div id="hier1"></div>
 <br/><br/>
 <div id="hier2"></div>
 <br/><br/>
 <div id="hier3"></div>
 <br/><br/>
+<div id="hier3a"></div>
+<br/><br/>
 <div id="hier4"></div>
 <br/><br/>
 <div id="hier5"></div>
 <br/><br/>
+
 <div id="hier6"></div>
 <br/><br/>
+<h2>Auth</h2>
 <div id="hier7"></div>
 <br/><br/>
 <div id="hier8"></div>
+<br/><br/>
+<div id="hier9"></div>
 
 </body>                                                                 
 </html>
