--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
         bottom: 0;
 	left: 510px;
 	width: 150px;
-#        height: 90px;
+//        height: 90px;
 }
 
 .rickshaw_graph .x_tick .title {
