more graphs, wider graphs

--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
 	position: absolute;
         top: 0;
         bottom: 0;
-	left: 510px;
+	left: 610px;
 	width: 150px;
 //        height: 90px;
 }
@@ -57,12 +57,15 @@
 <br/><br/>
 <div id="hier3a"></div>
 <br/><br/>
+<div id="hier3b"></div>
+<br/><br/>
 <div id="hier4"></div>
 <br/><br/>
 <div id="hier5"></div>
 <br/><br/>
 
 <div id="hier6"></div>
+
 <br/><br/>
 <h2>Auth</h2>
 <div id="hier7"></div>
