add metronome link, trigger travis build hopefully!

--- a/html/index.html
+++ b/html/index.html
@@ -106,5 +106,7 @@
 <br/><br/>
 <div id="hier9"></div>
 </div>
+<hr/>
+Built with <a href="https://github.com/ahupowerdns/metronome/">Metronome</a>.
 </body>                                                                 
 </html>
