add auth graph on raw database queries (which is query-cache-misses)

--- a/html/index.html
+++ b/html/index.html
@@ -109,6 +109,9 @@ alt="Fork me on GitHub"></a>
 <div id="hier8"></div>
 <br/><br/>
 <div id="hier9"></div>
+<br/><br/>
+<div id="hier10"></div>
+
 </div>
 
 <div>
