add TCP stats for recursor

--- a/html/index.html
+++ b/html/index.html
@@ -82,6 +82,8 @@ alt="Fork me on GitHub"></a>
 <br/><br/>
 <div id="hier2a"></div>
 <br/><br/>
+<div id="hier2b"></div>
+<br/><br/>
 <div id="hier3"></div>
 <br/><br/>
 <div id="hier3a"></div>
