further steps towards abstracting the Metronome graphing API so it is more universal

--- a/html/index.html
+++ b/html/index.html
@@ -74,9 +74,7 @@ alt="Fork me on GitHub"></a>
 
 </td></tr></table>
 </form>
-<div id="recursor">
-</div>
-<div id="auth">
+<div id="graphs">
 </div>
 
 <div>
