Allow the keyboard to be used on the selectors

--- a/html/index.html
+++ b/html/index.html
@@ -55,12 +55,12 @@ alt="Fork me on GitHub"></a>
 <table width="600"><tr><td><img src="https://www.powerdns.com/img/powerdns-logo-220px.png"/></td>
 <td align="right">
 
-<select id="server" onChange="updateFromForm();" name="server">
+<select id="server" onchange="updateFromForm();" onkeyup="updateFromForm();" name="server">
 </select>
 </td>
 <td align="right">
 
-<select id="duration" onChange="updateFromForm();" name="duration">
+<select id="duration" onchange="updateFromForm();" onkeyup="updateFromForm();" name="duration">
 <option value="-900">15 Minutes</option>
 <option value="-3600">1 Hour</option>
 <option value="-7200" selected="selected">2 Hours</option>
