--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
 
 <script src="engine.js"></script>
 <script src="local.js"></script>
+</head>
 <body>                                                                  
 <a href="https://github.com/ahuPowerDNS/metronome"><img style="position: absolute; top: 0;
 right: 0; border: 0;"
