move metronome server setting to local.js move all the graphs to graphs.js

--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
 		<link type="text/css" rel="stylesheet" href="lines.css">
 		<script src="engine.js"></script>
 		<script src="local.js"></script>
+		<script src="graphs.js"></script>		
 		<!-- todo: try moving these javascript files to the end of the html -->
 	</head>
 	<body>
