--- a/html/index.html
+++ b/html/index.html
@@ -14,6 +14,8 @@
 		<script src="local.js"></script>
 		<script src="graphs.js"></script>		
 		<!-- todo: try moving these javascript files to the end of the html -->
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+		<title>Metronome</title>
 	</head>
 	<body>
 		<a href="https://github.com/ahuPowerDNS/metronome"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
